develop: new endpoint getProdcutsPaged
