# src/main/java/com/ivanfrias/company/products/controllers/ProductController.java
@@ -1,12 +1,16 @@
 package com.ivanfrias.company.products.controllers;
 
 import com.ivanfrias.companies.api.ProductsApi;
+import com.ivanfrias.companies.model.PagedResponseProductDTO;
 import com.ivanfrias.companies.model.ProductDTO;
 import com.ivanfrias.companies.model.ProductRequestDTO;
 import com.ivanfrias.company.common.exceptions.utils.ControllerUtils;
+import com.ivanfrias.company.common.exceptions.utils.PaginationUtils;
 import com.ivanfrias.company.common.exceptions.utils.UnauthorizedException;
 import com.ivanfrias.company.products.services.ProductService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -55,5 +59,21 @@ public class ProductController extends ControllerUtils implements ProductsApi {
         Long userId = getAllClaims().get("user_id", Long.class);
         productService.deleteProductById(userId, productId);
         return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<PagedResponseProductDTO> getPagedProductsFilter(
+            String productName,
+            String categoryName,
+            String companyName,
+            Double minPrice,
+            Double maxPrice,
+            Integer pageNumberQueryParam,
+            Integer pageSizeQueryParam,
+            String sortByQueryParam
+    ) {
+        Pageable pageable = PaginationUtils.createPageable(pageNumberQueryParam, pageSizeQueryParam, sortByQueryParam);
+        Page<ProductDTO> products = productService.getPagedProductsFilter(productName, categoryName, companyName, minPrice, maxPrice, pageable);
+        return ResponseEntity.ok(PaginationUtils.fromPage(products));
     }
 }
